--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,9 @@
         <%= render 'shared/user_info' %>
         <%= render 'shared/stats' %>
       </div>
-
+      <div class="panel comment-form">
+        <%= render 'shared/posts' %>
+      </div>
     </div>
 
     <div class="col-lg-9">
