--- a/app/views/likings/_like_form.html.erb
+++ b/app/views/likings/_like_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(:liking, url: "/likings", method: :post) do |f| %>
   <%= f.hidden_field :post_id, :value => @post.id %>
-  <%= f.submit "Like" %>
+  <%= f.submit "Like", class: 'btn btn-primary btn-lg' %>
 <% end %>
