--- a/app/views/likings/_unlike_form.html.erb
+++ b/app/views/likings/_unlike_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(:liking, url: '/likings/:id@post.id', method: :delete) do |f| %>
   <%= f.hidden_field :post_id, :value => @post.id %>
-  <%= f.submit "Unlike" %>
+  <%= f.submit "Unlike", class: 'btn btn-lg btn-primary' %>
 <% end %>
