--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,18 +1,37 @@
-<% provide(:title, @title) %>
-  <%= gravatar_for @user %>
-  <h1><%= @user.name %></h1>
-  <%= link_to "view my profile", @user %>
-  <b>Posts:</b> <%= @user.posts.count %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="panel text-center">
+        <%= render 'shared/user_info' %>
+        <p>
+          <%= link_to "view my profile", @user %>
+        </p>
+        <b>Posts:</b> <%= @user.posts.count %>
+        <%= render 'shared/stats' %>
+      </div>
+    </div>
+    <div class="col-lg-8">
+      <div class="panel">
+        <div class="panel-heading">Following</div>
+      </div>
+      <div class="panel">
+        <div class="panel-body">
+          <% if @users.any? %>
+          <% @users.each do |user| %>
+          <%= link_to gravatar_for(user), user %>
+          <% end %>
+          <% end %>
+        </div>
+      </div>
+      <div class="panel">
+        <div class="panel-heading">Followers</div>
+      </div>
+      <% if @users.any? %>
+      <%= render @users %>
+      <%= will_paginate %>
+      <% end %>
 
-  <%= render 'shared/stats' %>
-  <% if @users.any? %>
-    <% @users.each do |user| %>
-      <%= link_to gravatar_for(user), user %>
-    <% end %>
-  <% end %>
-
-<h3><%= @title %></h3>
-<% if @users.any? %>
-  <%= render @users %>
-  <%= will_paginate %>
-<% end %>
+    </div>
+  </div>
+</div>
+</div>
