fixed bug in editing post

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,10 @@
-<h1>Edit post</h1>
-
-<%= render 'shared/posts' %>
+<div class="container">
+  <div class="row">
+    <div class="panel edit-post">
+      <div class="panel-body">
+      <h1>Edit post</h1>
+      <%= render 'shared/posts' %>
+    </div>
+    </div>
+  </div>
+</div>
