--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,7 +1,8 @@
 
-
+<div class="user-info">
 <% provide(:title, @user.email) %>
 <h3><%= @user.email %></h3>
 <div class="round">
   <%= gravatar_for(@user) %>
+</div>
 </div>
