--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 
     <div class="col-lg-9">
       <div class="panel">
-        <h1 class="heading-panel">Latest Posts</h1>
+        <h1 class="heading-panel">Latest Posts!</h1>
       </div>
       <div class="list-unstyled">
         <%= render 'shared/feed'%>
